# rust-staticlib-issue-repro

./: .gitignore  Cargo.toml  repro.h
cmake_test/: CMakeLists.txt  test.cpp  test2.cpp
src/: lib.rs  main.rs
